WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
189771
REGRESSION(236154) C API clients not using WKPageSetPageNavigationClient couldn't complete HTTPS requests
https://bugs.webkit.org/show_bug.cgi?id=189771
Summary
REGRESSION(236154) C API clients not using WKPageSetPageNavigationClient coul...
Alex Christensen
Reported
2018-09-19 17:05:45 PDT
REGRESSION(236154) C API clients not using WKPageSetPageNavigationClient couldn't complete HTTPS requests
Attachments
Patch
(2.27 KB, patch)
2018-09-19 17:08 PDT
,
Alex Christensen
thorton
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Alex Christensen
Comment 1
2018-09-19 17:08:29 PDT
Created
attachment 350162
[details]
Patch
Alex Christensen
Comment 2
2018-09-19 17:09:28 PDT
rdar://problem/44620769
Alex Christensen
Comment 3
2018-09-19 17:13:47 PDT
https://trac.webkit.org/changeset/236232/webkit
Radar WebKit Bug Importer
Comment 4
2018-09-19 17:14:28 PDT
<
rdar://problem/44623132
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug